Integration support embedded ns (#59)
* feat: Integration support embedded ns

* fix: add device not model tip

* fix: handle gateway eslint issues

* fix: resolve code review problem

---------

Co-authored-by: kangyiban <kangyb@milesight.com>

--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -134,6 +134,10 @@
     "common.time.afternoon": "下午",
     "common.time.morning": "上午",
     "common.unit.second": "秒",
+    "common.button.previous": "上一步",
+    "common.button.next": "下一步",
+    "common.label.please_select": "请选择",
+    "common.button.loading": "加载中",
     "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
     "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
     "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -198,6 +202,8 @@
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
     "valid.resp.at_least_one": "请至少选择一个{1}。",
+    "valid_http_address": "不合法的地址",
     "common.label.refresh": "刷新页面",
-    "common.label.settings": "设置"
+    "common.label.settings": "设置",
+    "common.confirm.execute": "确认执行更新操作？"
 }
