--- a/packages/locales/src/lang/cn/setting.json
+++ b/packages/locales/src/lang/cn/setting.json
@@ -26,5 +26,56 @@
     "setting.integration.webhook_status_error": "Webhook错误",
     "setting.integration.webhook_status_ready": "Webhook就绪",
     "setting.integration.webhook_status_waiting": "等待配置",
-    "setting.integration.webhook_url": "Webhook URL"
+    "setting.integration.webhook_url": "Webhook URL",
+    "setting.integration.service" : "可用服务",
+    "setting.integration.label.name": "网关名称",
+    "setting.integration.label.status": "网关状态",
+    "setting.integration.label.credential_id": "凭证",
+    "setting.integration.label.application_id": "Application ID",
+    "setting.integration.label.device_count": "已添加设备",
+    "setting.integration.label.mqtt_test_fail": "连接失败，请检查配置",
+    "setting.integration.label.device": "子设备",
+    "setting.integration.label.config.detail": "配置详情",
+    "setting.integration.label.device.eui": "DevEUI",
+    "setting.integration.label.device.synchronize": "同步",
+    "setting.integration.label.model": "模型",
+    "setting.integration.label.device.credentials": "证书",
+    "setting.integration.label.device.model": "模型",
+    "setting.integration.label.config_info": "配置信息",
+    "setting.integration.label.user_credential": "User Credential",
+    "setting.integration.label.general": "General",
+    "setting.integration.label.broken_address": "Broken Address",
+    "setting.integration.label.broken_port": "Broken Port",
+    "setting.integration.label.client_id":"Client ID",
+    "setting.integration.label.topic": "Topic",
+    "setting.integration.label.uplink_data": "Uplink Data",
+    "setting.integration.label.downlink_data": "Downlink Data",
+    "setting.integration.label.request_data": "Request Data",
+    "setting.integration.label.response_data": "response Data",
+    "setting.integration.label.add_gateway": "添加网关",
+    "setting.integration.label.gateway_online": "在线",
+    "setting.integration.label.gateway_offline": "离线",
+    "setting.integration.label.setup_app": "设置APP",
+    "setting.integration.label.choose_app": "选择APP",
+    "setting.integration.label.codec_repo": "Repo地址",
+    "setting.integration.label.codec_repo_title": "自定义CodeC仓库",
+    "setting.integration.device.sync.tip": "该操作会将您添加在网关中的节点设备的Payload Codec重置为空，请谨慎操作。",
+    "setting.integration.gateway.delete_tip": "删除网关会同步删除该网关下的节点设备，确认要删除该网关以及网关下的节点设备吗？",
+    "setting.integration.gateway.delete_bulk_tip": "删除网关会同步删除该网关下的节点设备，确认要删除这 {1} 个网关以及网关下的节点设备吗？",
+    "setting.integration.add.credential.tip": "请在网关的 Web GUl（网络服务器 - Application.setting.integration）中创建一个应用程序，并将下面生成的信息粘贴到其中。",
+    "setting.integration.add.application.tip": "在下面的网关中选择刚刚创建的应用程序的ID。",
+    "setting.integration.label.device.sync_tip": "该操作会将您添加在网关中的节点设备的Payload Codec重置为空，请谨慎操作。",
+    "setting.integration.message.test_mqtt_fail": "连接失败，请检查配置。",
+    "setting.integration.message.device_sync_success": "同步成功",
+    "setting.integration.label.synced_device": "已同步设备",
+    "setting.integration.label.syncable_device": "可同步设备 ({1})",
+    "setting.integration.label.device_delete_tip" : "确认要删除该设备吗？",
+    "setting.integration.label.device_bulk_delete_tip" : "确认要批量删除这 {1} 个设备吗？",
+    "setting.integration.device.update_codec_title" : "更新Codec",
+    "setting.integration.device.update_codec" : "更新产品对应的Codec",
+    "setting.integration.device.update_codec_desc": "用于从Repo中获取最新的产品Codec。注：新的Codec仅对新添加的设备生效。",
+    "setting.integration.message.sync_device_title": "同步设备",
+    "setting.integration.message.sync_device_tip": "设备同步操作会将网关上该节点设备所使用的codec置空，可能会影响该应用下的其他数据传输。确定同步吗？",
+    "setting.integration.codec.customize_tip": "请输入用于管理您自己Codec的Repo地址",
+    "setting.integration.sync_device_empty_model": "请完整填写所需信息"
 }
