--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -26,5 +26,56 @@
     "setting.integration.webhook_status_error": "Webhook Error",
     "setting.integration.webhook_status_ready": "Webhook Ready",
     "setting.integration.webhook_status_waiting": "Waiting For Config",
-    "setting.integration.webhook_url": "Webhook URL"
+    "setting.integration.webhook_url": "Webhook URL",
+    "setting.integration.service" : "Available Services",
+    "setting.integration.label.name": "Gateway Name",
+    "setting.integration.label.status": "Gateway Status",
+    "setting.integration.label.credential_id": "Credential",
+    "setting.integration.label.application_id": "Application ID",
+    "setting.integration.label.device_count": "Device Added",
+    "setting.integration.label.mqtt_test_fail": "Connection failed, please check configuration",
+    "setting.integration.label.device": "SubDevice",
+    "setting.integration.label.config.detail": "Configuration Details",
+    "setting.integration.label.device.eui": "DevEUI",
+    "setting.integration.label.device.synchronize": "Synchronize",
+    "setting.integration.label.model": "model",
+    "setting.integration.label.device.credentials": "Credentials",
+    "setting.integration.label.device.model": "model",
+    "setting.integration.label.config_info": "Configuration Information",
+    "setting.integration.label.user_credential": "User Credential",
+    "setting.integration.label.general": "General",
+    "setting.integration.label.broken_address": "Broken Address",
+    "setting.integration.label.broken_port": "Broken Port",
+    "setting.integration.label.client_id":"Client ID",
+    "setting.integration.label.topic": "Topic",
+    "setting.integration.label.uplink_data": "Uplink Data",
+    "setting.integration.label.downlink_data": "Downlink Data",
+    "setting.integration.label.request_data": "Request Data",
+    "setting.integration.label.response_data": "response Data",
+    "setting.integration.label.add_gateway": "Add Gateway",
+    "setting.integration.label.gateway_online": "Online",
+    "setting.integration.label.gateway_offline": "Offline",
+    "setting.integration.label.setup_app": "Setup an App",
+    "setting.integration.label.choose_app": "Choose an App",
+    "setting.integration.label.codec_repo": "Repo Address",
+    "setting.integration.label.codec_repo_title": "Custom Codec Repo",
+    "setting.integration.device.sync.tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
+    "setting.integration.gateway.delete_tip": "Deleting a gateway will also delete the node devices under it. Are you sure you want to delete the gateway and the node devices under it?",
+    "setting.integration.gateway.delete_bulk_tip": "Deleting a gateway will also delete the node devices under the gateway. Are you sure you want to delete this {1} gateway and the node devices under it?",
+    "setting.integration.add.credential.tip": "Please create an application in the Web GUl of the gateway (Network Server - Applicatiosetting.integration) and paste the generated information below into it.",
+    "setting.integration.add.application.tip": "Select the ID of the application you just created in the gateway below.",
+    "setting.integration.label.device.sync_tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
+    "setting.integration.message.test_mqtt_fail": "Connection failed, please check configuration.",
+    "setting.integration.message.device_sync_success": "Successful Sync",
+    "setting.integration.label.synced_device": "Synced Devices",
+    "setting.integration.label.syncable_device": "Syncable Devices ({1})",
+    "setting.integration.label.device_delete_tip" : "Are you sure you want to delete this device?",
+    "setting.integration.label.device_bulk_delete_tip" : "Are you sure you want to delete these {1} devices in batches?",
+    "setting.integration.device.update_codec_title" : "Update Codec",
+    "setting.integration.device.update_codec" : "Update Codec corresponding to the product",
+    "setting.integration.device.update_codec_desc": "Used to obtain the latest product Codec from Repo. Note: The new Codec is only effective for newly added devices.",
+    "setting.integration.message.sync_device_title": "Synchronize Devices",
+    "setting.integration.message.sync_device_tip": "Device synchronization will clear the codec used by the node device on the gateway, which may affect other data transmission under the application. Are you sure to synchronize?",
+    "setting.integration.codec.customize_tip": "Please enter the Repo address used to manage your own Codec",
+    "setting.integration.sync_device_empty_model": "Please fill in the required information completely"
 }
