--- a/packages/locales/src/lang/en/dashboard.json
+++ b/packages/locales/src/lang/en/dashboard.json
@@ -30,5 +30,9 @@
     "dashboard.switch_title_on": "On",
     "dashboard.label.left_y_axis": "LeftY",
     "dashboard.label.right_y_axis": "RightY",
-    "dashboard.label.y_axis": "Y Axis"
+    "dashboard.label.y_axis": "Y Axis",
+    "dashboard.set_as_home_dashboard_tip": "Set as home dashboard",
+    "dashboard.unset_as_home_dashboard_tip": "Unset as home dashboard",
+    "dashboard.set_as_home_dashboard_description": "是否确认将当前仪表盘设为设置为主仪表盘，该操作将会 覆盖掉原有的主仪表盘？",
+    "dashboard.unset_as_home_dashboard_description": "是否确认取消将当前仪表盘设为设置为主仪表盘？"
 }
