fix: Integration embedded ns style

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -92,7 +92,7 @@
     "common.label.target": "Target",
     "common.label.test": "Test",
     "common.label.time": "Time",
-    "common.label.tip": "Tip",
+    "common.label.tip": "Prompt",
     "common.label.title": "Title",
     "common.label.true": "True",
     "common.label.type": "Type",
