feat: select component increases the display of empty data and the form adds a disabled style

--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -205,5 +205,6 @@
     "valid_http_address": "不合法的地址",
     "common.label.refresh": "刷新页面",
     "common.label.settings": "设置",
-    "common.confirm.execute": "确认执行更新操作？"
+    "common.confirm.execute": "确认执行更新操作？",
+    "common.label.no_options": "没有选项"
 }
