feat: entity table add unit and supports modify

--- a/packages/locales/src/lang/cn/entity.json
+++ b/packages/locales/src/lang/cn/entity.json
@@ -11,14 +11,16 @@
     "entity.label.entity_minimum_value": "最小值",
     "entity.label.entity_type_of_access": "访问类型",
     "entity.label.entity_type_of_access_read_and_write": "可读可写",
-    "entity.label.entity_type_of_access_readonly": "只读",
+    "entity.label.entity_type_of_access_readonly": "客户",
     "entity.label.entity_type_of_access_write": "只写",
     "entity.label.entity_type_of_boolean": "BOOLEAN",
     "entity.label.entity_type_of_double": "DOUBLE",
     "entity.label.entity_type_of_long": "LONG",
     "entity.label.entity_type_of_string": "STRING",
+    "entity.label.entity_type_of_enum": "ENUM",
     "entity.label.historical_data": "历史数据",
     "entity.label.set_enumeration_items": "设置枚举项",
     "entity.label.set_value": "设置值",
-    "entity.label.value_source": "值来源"
+    "entity.label.value_source": "值来源",
+    "entity.label.unit": "单位"
 }
