--- a/packages/locales/src/lang/en/entity.json
+++ b/packages/locales/src/lang/en/entity.json
@@ -11,14 +11,16 @@
     "entity.label.entity_minimum_value": "Minimum Value",
     "entity.label.entity_type_of_access": "Type of Access",
     "entity.label.entity_type_of_access_read_and_write": "RW",
-    "entity.label.entity_type_of_access_readonly": "R",
+    "entity.label.entity_type_of_access_readonly": "Client",
     "entity.label.entity_type_of_access_write": "W",
     "entity.label.entity_type_of_boolean": "BOOLEAN",
     "entity.label.entity_type_of_double": "DOUBLE",
     "entity.label.entity_type_of_long": "LONG",
     "entity.label.entity_type_of_string": "STRING",
+    "entity.label.entity_type_of_enum": "ENUM",
     "entity.label.historical_data": "Historical Data",
     "entity.label.set_enumeration_items": "Set Enumeration Items",
     "entity.label.set_value": "Set Value",
-    "entity.label.value_source": "Value Source"
+    "entity.label.value_source": "Value Source",
+    "entity.label.unit": "Unit"
 }
