--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -206,5 +206,6 @@
     "common.label.refresh": "刷新页面",
     "common.label.settings": "设置",
     "common.confirm.execute": "确认执行更新操作？",
-    "common.label.no_options": "没有选项"
+    "common.label.no_options": "没有选项",
+    "common.label.404_not_found": "404 没有找到"
 }
