--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -208,5 +208,6 @@
     "common.label.settings": "Settings",
     "common.confirm.execute": "Are you sure to execute the update operation?",
     "common.label.no_options": "No options",
-    "common.label.404_not_found": "404 Not Found"
+    "common.label.404_not_found": "404 Not Found",
+    "common.label.loading": "Loading..."
 }
