feat: Adjust the i18n and compatible small screen display

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -7,6 +7,7 @@
   "common.button.save": "Save",
   "common.document.title": "Beaver IoT",
   "common.label.403_forbidden": "403 Forbidden",
+  "common.label.404_not_found": "404 Not Found",
   "common.label.add": "Add",
   "common.label.back": "Back",
   "common.label.banned": "Banned",
@@ -54,6 +55,7 @@
   "common.label.label": "Label",
   "common.label.language": "Language",
   "common.label.last_modified_time": "Last Updated Time",
+  "common.label.loading": "Loading...",
   "common.label.log": "Log",
   "common.label.login": "Login",
   "common.label.max": "Max.",
@@ -63,6 +65,7 @@
   "common.label.ms": "ms",
   "common.label.name": "Name",
   "common.label.no_device_entity": "Entities with No Device",
+  "common.label.no_options": "No available items",
   "common.label.no_permissions": "No Permissions",
   "common.label.on": "ON",
   "common.label.openapi": "OpenAPI",
@@ -72,6 +75,7 @@
   "common.label.password": "Password",
   "common.label.property": "Property",
   "common.label.readonly": "Read only",
+  "common.label.refresh": "Refresh Page",
   "common.label.register": "Register",
   "common.label.remark": "Remark",
   "common.label.removal": "Removal",
@@ -84,6 +88,7 @@
   "common.label.selected": "Selected",
   "common.label.service": "Service",
   "common.label.setting": "Setting",
+  "common.label.settings": "Settings",
   "common.label.sign_out": "Sign Out",
   "common.label.sort_type_newest_to_oldest": "Newest to Oldest",
   "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
@@ -106,7 +111,7 @@
   "common.label.week": "Week",
   "common.label.workflow": "Workflow",
   "common.label.writable": "Writable",
-  "common.language.cn": "Chinese",
+  "common.language.cn": "中文",
   "common.language.cn_short": "ZH",
   "common.language.en": "English",
   "common.language.en_short": "EN",
@@ -157,7 +162,7 @@
   "dashboard.label_nearly_twelve_hours": "Nearly 12 hours",
   "dashboard.label_sum_value": "Sum. Value",
   "dashboard.leave_to_new_dashboard_description": "Whether or not you want to jump to the newly created dashboard, please note that the current dashboard your changes will not be saved.",
-  "dashboard.plugin_class_data_card": "Data Card",
+  "dashboard.plugin_class_data_card": "Data Display",
   "dashboard.plugin_class_data_chart": "Data Charts",
   "dashboard.plugin_class_operate": "Operable Widgets",
   "dashboard.plugin_class_other": "Other",
