--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -7,6 +7,7 @@
   "common.button.save": "保存",
   "common.document.title": "Beaver IoT",
   "common.label.403_forbidden": "403 禁止",
+  "common.label.404_not_found": "404 未找到页面",
   "common.label.add": "添加",
   "common.label.back": "返回",
   "common.label.banned": "禁止",
@@ -54,6 +55,7 @@
   "common.label.label": "标签",
   "common.label.language": "语言",
   "common.label.last_modified_time": "最后更新时间",
+  "common.label.loading": "加载中...",
   "common.label.log": "日志",
   "common.label.login": "登录",
   "common.label.max": "最大",
@@ -63,6 +65,7 @@
   "common.label.ms": "ms",
   "common.label.name": "名称",
   "common.label.no_device_entity": "无设备归属实体",
+  "common.label.no_options": "无可用项",
   "common.label.no_permissions": "无权限",
   "common.label.on": "开",
   "common.label.openapi": "OpenAPI",
@@ -70,7 +73,9 @@
   "common.label.output": "输出",
   "common.label.page_not_permission": "您没有访问权限，请联系管理员处理。",
   "common.label.password": "密码",
+  "common.label.property": "属性",
   "common.label.readonly": "只读",
+  "common.label.refresh": "刷新页面",
   "common.label.register": "注册",
   "common.label.remark": "备注",
   "common.label.removal": "移除",
@@ -83,6 +88,7 @@
   "common.label.selected": "选中",
   "common.label.service": "服务",
   "common.label.setting": "设置",
+  "common.label.settings": "设置",
   "common.label.sign_out": "登出",
   "common.label.sort_type_newest_to_oldest": "最新至最早",
   "common.label.sort_type_oldest_to_newest": "最早至最新",
@@ -107,7 +113,7 @@
   "common.label.writable": "可写\n",
   "common.language.cn": "中文",
   "common.language.cn_short": "ZH",
-  "common.language.en": "英文",
+  "common.language.en": "English",
   "common.language.en_short": "EN",
   "common.message.add_success": "添加成功。",
   "common.message.copy_successful": "复制成功。",
@@ -156,7 +162,7 @@
   "dashboard.label_nearly_twelve_hours": "近12小时",
   "dashboard.label_sum_value": "总值",
   "dashboard.leave_to_new_dashboard_description": "是否要跳转至新创建的仪表盘，请注意当前仪表盘您修改的内容不会被保存。",
-  "dashboard.plugin_class_data_card": "数据卡片",
+  "dashboard.plugin_class_data_card": "数据展示",
   "dashboard.plugin_class_data_chart": "数据图表",
   "dashboard.plugin_class_operate": "可操作组件",
   "dashboard.plugin_class_other": "其他",
