--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -7,6 +7,7 @@
     "common.button.save": "Save",
     "common.document.title": "Beaver IoT",
     "common.label.403_forbidden": "403 Forbidden",
+    "common.label.404_not_found": "404 Not Found",
     "common.label.add": "Add",
     "common.label.back": "Back",
     "common.label.banned": "Banned",
@@ -54,6 +55,7 @@
     "common.label.label": "Label",
     "common.label.language": "Language",
     "common.label.last_modified_time": "Last Updated Time",
+    "common.label.loading": "Loading...",
     "common.label.log": "Log",
     "common.label.login": "Login",
     "common.label.max": "Max.",
@@ -63,6 +65,7 @@
     "common.label.ms": "ms",
     "common.label.name": "Name",
     "common.label.no_device_entity": "Entities with No Device",
+    "common.label.no_options": "No available items",
     "common.label.no_permissions": "No Permissions",
     "common.label.on": "ON",
     "common.label.openapi": "OpenAPI",
@@ -72,6 +75,7 @@
     "common.label.password": "Password",
     "common.label.property": "Property",
     "common.label.readonly": "Read only",
+    "common.label.refresh": "Refresh Page",
     "common.label.register": "Register",
     "common.label.remark": "Remark",
     "common.label.removal": "Removal",
@@ -84,6 +88,7 @@
     "common.label.selected": "Selected",
     "common.label.service": "Service",
     "common.label.setting": "Setting",
+    "common.label.settings": "Settings",
     "common.label.sign_out": "Sign Out",
     "common.label.sort_type_newest_to_oldest": "Newest to Oldest",
     "common.label.sort_type_oldest_to_newest": "Oldest to Newest",
@@ -106,7 +111,7 @@
     "common.label.week": "Week",
     "common.label.workflow": "Workflow",
     "common.label.writable": "Writable",
-    "common.language.cn": "Chinese",
+    "common.language.cn": "中文",
     "common.language.cn_short": "ZH",
     "common.language.en": "English",
     "common.language.en_short": "EN",
@@ -204,10 +209,5 @@
     "valid.input.version": "The version number does not comply with the specification.",
     "valid.resp.at_least_one": "Please select at least one {1}.",
     "valid_http_address": "Invalid address",
-    "common.label.refresh": "Refresh Page",
-    "common.label.settings": "Settings",
-    "common.confirm.execute": "Are you sure to execute the update operation?",
-    "common.label.no_options": "No options",
-    "common.label.404_not_found": "404 Not Found",
-    "common.label.loading": "Loading..."
+    "common.confirm.execute": "Are you sure to execute the update operation?"
 }
