--- a/packages/locales/src/lang/en/setting.json
+++ b/packages/locales/src/lang/en/setting.json
@@ -28,25 +28,22 @@
     "setting.integration.webhook_status_waiting": "Waiting For Config",
     "setting.integration.webhook_url": "Webhook URL",
     "setting.integration.service" : "Available Services",
-    "setting.integration.label.name": "Gateway Name",
+    "setting.integration.label.gateway_name": "Gateway Name",
     "setting.integration.label.status": "Gateway Status",
-    "setting.integration.label.credential_id": "Credential",
+    "setting.integration.label.credential": "Credential",
     "setting.integration.label.application_id": "Application ID",
     "setting.integration.label.device_count": "Device Added",
     "setting.integration.label.mqtt_test_fail": "Connection failed, please check configuration",
-    "setting.integration.label.device": "SubDevice",
-    "setting.integration.label.config.detail": "Configuration Details",
-    "setting.integration.label.device.eui": "DevEUI",
-    "setting.integration.label.device.synchronize": "Synchronize",
+    "setting.integration.label.sub_device": "SubDevice",
+    "setting.integration.label.device_eui": "DevEUI",
+    "setting.integration.label.synchronize": "Synchronize",
     "setting.integration.label.model": "model",
-    "setting.integration.label.device.credentials": "Credentials",
-    "setting.integration.label.device.model": "model",
+    "setting.integration.label.credentials": "Credentials",
     "setting.integration.label.config_info": "Configuration Information",
     "setting.integration.label.user_credential": "User Credential",
     "setting.integration.label.general": "General",
     "setting.integration.label.broken_address": "Broken Address",
     "setting.integration.label.broken_port": "Broken Port",
-    "setting.integration.label.client_id":"Client ID",
     "setting.integration.label.topic": "Topic",
     "setting.integration.label.uplink_data": "Uplink Data",
     "setting.integration.label.downlink_data": "Downlink Data",
@@ -59,12 +56,11 @@
     "setting.integration.label.choose_app": "Choose an App",
     "setting.integration.label.codec_repo": "Repo Address",
     "setting.integration.label.codec_repo_title": "Custom Codec Repo",
-    "setting.integration.device.sync.tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
+    "setting.integration.device.sync_tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
     "setting.integration.gateway.delete_tip": "Deleting a gateway will also delete the node devices under it. Are you sure you want to delete the gateway and the node devices under it?",
     "setting.integration.gateway.delete_bulk_tip": "Deleting a gateway will also delete the node devices under the gateway. Are you sure you want to delete this {1} gateway and the node devices under it?",
-    "setting.integration.add.credential.tip": "Please create an application in the Web GUl of the gateway (Network Server - Applicatiosetting.integration) and paste the generated information below into it.",
-    "setting.integration.add.application.tip": "Select the ID of the application you just created in the gateway below.",
-    "setting.integration.label.device.sync_tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
+    "setting.integration.add.credential_tip": "Please create an application in the Web GUl of the gateway (Network Server - Applicatiosetting.integration) and paste the generated information below into it.",
+    "setting.integration.add.application_tip": "Select the ID of the application you just created in the gateway below.",
     "setting.integration.message.test_mqtt_fail": "Connection failed, please check configuration.",
     "setting.integration.message.device_sync_success": "Successful Sync",
     "setting.integration.label.synced_device": "Synced Devices",
