chore: import i18n resource

--- a/packages/locales/import/zh.json
+++ b/packages/locales/import/zh.json
@@ -3,8 +3,12 @@
   "common.button.cancel": "取消",
   "common.button.confirm": "确认",
   "common.button.edit": "编辑",
+  "common.button.loading": "加载中",
+  "common.button.next": "下一步",
+  "common.button.previous": "上一步",
   "common.button.reset": "重置",
   "common.button.save": "保存",
+  "common.confirm.execute": "是否确认执行更新操作？",
   "common.document.title": "Beaver IoT",
   "common.label.403_forbidden": "403 禁止",
   "common.label.404_not_found": "404 未找到页面",
@@ -73,6 +77,7 @@
   "common.label.output": "输出",
   "common.label.page_not_permission": "您没有访问权限，请联系管理员处理。",
   "common.label.password": "密码",
+  "common.label.please_select": "请选择",
   "common.label.property": "属性",
   "common.label.readonly": "只读",
   "common.label.refresh": "刷新页面",
@@ -220,18 +225,63 @@
   "error.http.token_not_found": "您的账户尚未登录。",
   "error.http.user_has_no_permission": "当前用户无权限",
   "error.http.user_register_email_exist": "用户注册邮箱已存在。",
+  "setting.integration.add.application_tip": "选择您刚刚才网关中创建的应用。",
+  "setting.integration.add.credential_tip": "请在网关的 Web GUI（网络服务器 - 应用程序）中创建一个应用程序，并粘贴以下生成的信息。",
   "setting.integration.api_status": "API状态",
   "setting.integration.api_status_error": "API错误",
   "setting.integration.api_status_ready": "API就绪",
   "setting.integration.api_status_waiting": "等待连接",
   "setting.integration.available_function": "可用功能",
   "setting.integration.available_function_warning_text": "以下功能不可用，需要在集成配置中配置Open API后才能使用。",
+  "setting.integration.codec.customize_tip": "请输入编解码文件的地址用于对设备数据进行编解码。",
   "setting.integration.configuration": "集成配置",
   "setting.integration.data_access_service": "数据访问服务",
+  "setting.integration.device.sync_tip": "此操作将把您添加到网关的节点设备的有效负载编解码器重置为空。请谨慎操作。",
+  "setting.integration.device.update_codec": "更新编解码文件",
+  "setting.integration.device.update_codec_desc": "用于从指定获的地址获取最新的产品编解码器。注意：新的编解码器只对新添加的设备有效。",
+  "setting.integration.device.update_codec_title": "更新编解码文件",
   "setting.integration.function_data_sync_confirm_helper_text": "确认是否执行此操作。同步只会添加不存在的设备，不会更新已有设备的信息。",
   "setting.integration.function_data_sync_confirm_title": "数据同步",
   "setting.integration.function_data_sync_desc": "此服务将从Milesight开发平台拉取所有绑定到连接应用程序的设备信息和设备上报的遥测数据。",
   "setting.integration.function_data_sync_title": "数据同步",
+  "setting.integration.gateway.delete_bulk_tip": "删除网关也会删除网关下的节点设备。您确定要删除此 {1} 网关及其下的节点设备吗？",
+  "setting.integration.gateway.delete_tip": "删除网关也会删除其下的节点设备。您确定要删除网关及其下的节点设备吗？",
+  "setting.integration.label.add_gateway": "添加网关",
+  "setting.integration.label.application_id": "应用 ID",
+  "setting.integration.label.broken_address": "MQTT服务器地址",
+  "setting.integration.label.broken_port": "MQTT服务器端口",
+  "setting.integration.label.choose_app": "选择应用",
+  "setting.integration.label.codec_repo": "文件地址",
+  "setting.integration.label.codec_repo_title": "自定义文件地址",
+  "setting.integration.label.config_info": "配置信息",
+  "setting.integration.label.credential": "凭证",
+  "setting.integration.label.credentials": "凭证",
+  "setting.integration.label.device_bulk_delete_tip": "是否确认批量删除{1}台设备？",
+  "setting.integration.label.device_count": "已添加设备",
+  "setting.integration.label.device_delete_tip": "是否确认删除设备？\n",
+  "setting.integration.label.device_eui": "DevEUI",
+  "setting.integration.label.downlink_data": "下行数据",
+  "setting.integration.label.gateway_name": "网关名称",
+  "setting.integration.label.gateway_offline": "离线",
+  "setting.integration.label.gateway_online": "在线",
+  "setting.integration.label.general": "常规",
+  "setting.integration.label.model": "型号",
+  "setting.integration.label.mqtt_test_fail": "连接失败，请检查配置。",
+  "setting.integration.label.request_data": "请求数据",
+  "setting.integration.label.response_data": "响应数据",
+  "setting.integration.label.setup_app": "设置应用",
+  "setting.integration.label.status": "网关状态",
+  "setting.integration.label.sub_device": "子设备",
+  "setting.integration.label.syncable_device": "可同步的设备({1})",
+  "setting.integration.label.synced_device": "已添加的设备",
+  "setting.integration.label.synchronize": "同步",
+  "setting.integration.label.topic": "MQTT 主题",
+  "setting.integration.label.uplink_data": "上行数据",
+  "setting.integration.label.user_credential": "用户凭证",
+  "setting.integration.message.device_sync_success": "同步成功",
+  "setting.integration.message.sync_device_tip": "是否确认执行同步设备的操作？",
+  "setting.integration.message.sync_device_title": "同步设备",
+  "setting.integration.message.test_mqtt_fail": "连接失败，请检查配置。",
   "setting.integration.openapi_config": "OpenAPI配置",
   "setting.integration.openapi_config_helper_text": "API密钥用于与服务器进行身份验证。",
   "setting.integration.openapi_frequency_helper_text": "范围：30秒 - 86400秒",
@@ -240,7 +290,9 @@
   "setting.integration.param_client_id": "客户端ID",
   "setting.integration.param_client_secret": "客户端密钥",
   "setting.integration.param_server_address": "服务器地址",
+  "setting.integration.service": "可用服务",
   "setting.integration.service_operation_confirm": "确认操作{1}?",
+  "setting.integration.sync_device_empty_model": "请输入完整的必填信息。",
   "setting.integration.webhook_helper_text": "通过Webhook服务实时接收Milesight开发平台推送的数据，并将生成的URL地址粘贴到Milesight开发平台的应用程序中。",
   "setting.integration.webhook_secret_key": "密钥",
   "setting.integration.webhook_status": "Webhook状态",
@@ -288,6 +340,7 @@
   "user.role.single_integration_remove_tip": "移除之后，将不可访问改集成下的所有设备和独立于设备外的实体，是否确认移除集成：{0}？",
   "user.role.single_member_remove_tip": "是否确认要移除用户：{0}？",
   "user.role.users_tab_name": "用户",
+  "valid_http_address": "无效地址",
   "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
   "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
   "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -373,6 +426,7 @@
   "workflow.editor.form_param_timer_type_cycle": "周期执行",
   "workflow.editor.form_param_timer_type_interval": "间隔执行",
   "workflow.editor.form_param_timer_type_once": "单次执行",
+  "workflow.editor.input_placeholder_remark": "添加描述...",
   "workflow.editor.log_panel_title_test_run": "运行测试",
   "workflow.editor.log_panel_title_verification_result": "验证结果",
   "workflow.editor.log_title_run": "运行日志",
@@ -426,6 +480,7 @@
   "workflow.label.logic_keyword_elseif": "ELIF",
   "workflow.label.logic_keyword_if": "IF",
   "workflow.label.logic_keyword_or": "OR",
+  "workflow.label.mqtt_node_name": "MQTT",
   "workflow.label.no_log_record": "无日志记录",
   "workflow.label.node_category_action": "动作类",
   "workflow.label.node_category_control": "控制类",
