--- a/packages/locales/src/lang/cn/global.json
+++ b/packages/locales/src/lang/cn/global.json
@@ -3,8 +3,12 @@
     "common.button.cancel": "取消",
     "common.button.confirm": "确认",
     "common.button.edit": "编辑",
+    "common.button.loading": "加载中",
+    "common.button.next": "下一步",
+    "common.button.previous": "上一步",
     "common.button.reset": "重置",
     "common.button.save": "保存",
+    "common.confirm.execute": "是否确认执行更新操作？",
     "common.document.title": "Beaver IoT",
     "common.label.403_forbidden": "403 禁止",
     "common.label.404_not_found": "404 未找到页面",
@@ -73,6 +77,7 @@
     "common.label.output": "输出",
     "common.label.page_not_permission": "您没有访问权限，请联系管理员处理。",
     "common.label.password": "密码",
+    "common.label.please_select": "请选择",
     "common.label.property": "属性",
     "common.label.readonly": "只读",
     "common.label.refresh": "刷新页面",
@@ -140,10 +145,6 @@
     "common.time.afternoon": "下午",
     "common.time.morning": "上午",
     "common.unit.second": "秒",
-    "common.button.previous": "上一步",
-    "common.button.next": "下一步",
-    "common.label.please_select": "请选择",
-    "common.button.loading": "加载中",
     "valid.date.selected_time_greater_than_now_time": "不支持早于当前时间的时间。",
     "valid.date.start_time_greater_than_end_time": "开始时间不能晚于结束时间。",
     "valid.date.start_time_less_than_pre_end_time": "开始时间不能早于上次结束时间。",
@@ -208,6 +209,5 @@
     "valid.input.value": "输入值：仅{0}。",
     "valid.input.version": "版本号不符合规范。",
     "valid.resp.at_least_one": "请至少选择一个{1}。",
-    "valid_http_address": "不合法的地址",
-    "common.confirm.execute": "确认执行更新操作？"
+    "valid_http_address": "无效地址"
 }
