--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -3,8 +3,12 @@
     "common.button.cancel": "Cancel",
     "common.button.confirm": "Confirm",
     "common.button.edit": "Edit",
+    "common.button.loading": "Loading",
+    "common.button.next": "Next",
+    "common.button.previous": "Previous",
     "common.button.reset": "Reset",
     "common.button.save": "Save",
+    "common.confirm.execute": "Are you sure to execute the update operation?",
     "common.document.title": "Beaver IoT",
     "common.label.403_forbidden": "403 Forbidden",
     "common.label.404_not_found": "404 Not Found",
@@ -73,6 +77,7 @@
     "common.label.output": "Output",
     "common.label.page_not_permission": "Access denied. Please reach out to the administrator.",
     "common.label.password": "Password",
+    "common.label.please_select": "Please select",
     "common.label.property": "Property",
     "common.label.readonly": "Read only",
     "common.label.refresh": "Refresh Page",
@@ -97,7 +102,7 @@
     "common.label.target": "Target",
     "common.label.test": "Test",
     "common.label.time": "Time",
-    "common.label.tip": "Prompt",
+    "common.label.tip": "Tip",
     "common.label.title": "Title",
     "common.label.true": "True",
     "common.label.type": "Type",
@@ -140,10 +145,6 @@
     "common.time.afternoon": "p.m.",
     "common.time.morning": "a.m.",
     "common.unit.second": "s",
-    "common.button.previous": "Previous",
-    "common.button.next": "Next",
-    "common.label.please_select": "Please select",
-    "common.button.loading": "Loading",
     "valid.date.selected_time_greater_than_now_time": "The time earlier than current time is not supported.",
     "valid.date.start_time_greater_than_end_time": "The start time cannot be later than end time.",
     "valid.date.start_time_less_than_pre_end_time": "The start time cannot be earlier than the last end time.",
@@ -208,6 +209,5 @@
     "valid.input.value": "Input value: {0} only.",
     "valid.input.version": "The version number does not comply with the specification.",
     "valid.resp.at_least_one": "Please select at least one {1}.",
-    "valid_http_address": "Invalid address",
-    "common.confirm.execute": "Are you sure to execute the update operation?"
+    "valid_http_address": "Invalid address"
 }
