chore: import i18n resource

--- a/packages/locales/import/en.json
+++ b/packages/locales/import/en.json
@@ -8,7 +8,7 @@
   "common.button.previous": "Previous",
   "common.button.reset": "Reset",
   "common.button.save": "Save",
-  "common.confirm.execute": "Are you sure to execute the update operation?",
+  "common.confirm.execute": "Are you sure you want to proceed with the update?",
   "common.document.title": "Beaver IoT",
   "common.label.403_forbidden": "403 Forbidden",
   "common.label.404_not_found": "404 Not Found",
@@ -233,10 +233,10 @@
   "setting.integration.api_status_waiting": "Waiting For Connection",
   "setting.integration.available_function": "Available Function",
   "setting.integration.available_function_warning_text": "The following functions are not available and need to be configured with Open API under integrated configuration before they can be used.",
-  "setting.integration.codec.customize_tip": "Please enter the Codec file address used for coding and decoding the device data..",
+  "setting.integration.codec.customize_tip": "Please enter the Codec file address used for coding and decoding the device data.",
   "setting.integration.configuration": "Integration Configuration",
   "setting.integration.data_access_service": "Data Access Service",
-  "setting.integration.device.sync_tip": "This operation will reset the Payload Codec of the node device you added to the gateway to empty. Please operate with caution.",
+  "setting.integration.device.sync_tip": "This will reset the Payload Codec of the node device (used in gateway) to empty. Please Proceed with caution.",
   "setting.integration.device.update_codec": "Updating Codec Files",
   "setting.integration.device.update_codec_desc": "Used to obtain the latest product codec from the specified acquired address. Note: The new codec is only valid for newly added devices.",
   "setting.integration.device.update_codec_title": "Update Codec File",
