feat: Add http & httpin node for workflow editor

--- a/packages/locales/src/lang/en/global.json
+++ b/packages/locales/src/lang/en/global.json
@@ -216,5 +216,6 @@
     "common.message.upload_error_server_error": "Upload failed, please try again later",
     "common.label.select_entity": "Select Entity",
     "common.label.local_upload": "Local Upload",
-    "common.label.required": "Required"
+    "common.label.required": "Required",
+    "common.label.data_encoding_format": "Data Encoding Format"
 }
