--- a/packages/locales/src/lang/cn/entity.json
+++ b/packages/locales/src/lang/cn/entity.json
@@ -22,5 +22,7 @@
     "entity.label.set_enumeration_items": "设置枚举项",
     "entity.label.set_value": "设置值",
     "entity.label.value_source": "值来源",
-    "entity.label.unit": "单位"
+    "entity.label.unit": "单位",
+    "entity.label.bool_enum_true": "布尔值为true",
+    "entity.label.bool_enum_false": "布尔值为false"
 }
